@@ -27,6 +27,7 @@ PostGIS 2.0.1
   - #1829, fix uninitialized read in GeoJSON parser
   - #1830, fix dumper against PgSQL 9.2 (dfuhry)?
   - #1839, handling of subdatasets in GeoTIFF in raster2pgsql.
+  - #1840, fix logic of when to compute # of tiles in raster2pgsql.
 
 * Enhancements *
 
